# computa

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs  orchestrator.rs  settings.rs
crates/transcribe/: Cargo.toml
crates/transcribe/src/: lib.rs
docs/: architecture.md  development.md
docs/adr/: 0001-webview-only-ts-layer.md  0002-monorepo-pnpm-plus-cargo.md  0003-local-whisper-via-whisper-rs.md
docs/superpowers/plans/: 2026-06-03-computa-scaffold.md
docs/superpowers/specs/: 2026-06-03-computa-scaffold-design.md
