[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/audio",
    "crates/transcribe",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Taylor Allen"]
repository = "https://github.com/taylorallen0913/computa"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
